--- a/templates/login.html
+++ b/templates/login.html
@@ -58,7 +58,7 @@
                             </a>
                         </div>
                         <div class="login-form">
-                            <form action="" method="post">
+                            <form action="#" method="POST">
                                 <div class="form-group">
                                     <label><b><i>Usuario</i></b></label>
                                     <input class="au-input au-input--full border_tem" type="user" name="user " placeholder="User">
