--- a/templates/registrarme.html
+++ b/templates/registrarme.html
@@ -62,7 +62,7 @@
                                     </div>
                                     <div class="card shadow-lg border-3 rounded-lg mt-5 border border-3 border_card">
                                         <div class="card-header">
-                                            <h2 class="text-center font-weight-light my-4"><b class="text-muted"><i>Registro de Usuario del Sistema</i></b></h2>
+                                            <h2 class="text-center font-weight-light my-4"><b class="text-muted"><i>Registro de Usuario</i></b></h2>
                                         </div>
                                         <div class="card-body">
                                             <form method="POST" action="{{url_for('entrar')}}">
@@ -100,7 +100,7 @@
                                                     <div class="col-md-6">
                                                         <div class="form-floating mb-3 mb-md-0">
                                                             <label for="inputPassword"><b><i>Usuario</i></b></label>
-                                                            <input class="form-control border_tem" id="usuario" name="area" type="text"
+                                                            <input class="form-control border_tem" id="user" name="user" type="text"
                                                                 placeholder="Create Usuario" />
                                                             
                                                         </div>
