--- a/templates/registrosalaa.html
+++ b/templates/registrosalaa.html
@@ -5,10 +5,9 @@
     <div id="layoutSidenav_content">
         <main>
             <div class="container-fluid px-5">
-                <h1 class="mt-4"><b class="text-muted"><i>Tabla de Registros de Entradas General</i></b></h1>
+                <h1 class="mt-4"><b class="text-muted"><i>Tabla de Registros de Sala A</i></b></h1>
                 <br>
-                <a href="{{url_for('registrosalab')}}"><button type="button" class="btn btn-outline-secondary  border-2 border_tem"><i>Registros de sala B</i></button></a>
-                <a href="{{url_for('registrosalaa')}}"><button type="button" class="btn btn-outline-secondary   border-2 border_tem"><i>Registros de sala A</i></button></a>
+                <a href="{{url_for('registro_entrada')}}"><button type="button" class="btn btn-outline-secondary  border-2 border_tem"><i>Regresar a tabla Anterior</i></button></a>
                 <br>
                 <br>
                 <div class="card mb-4 border border-3 border_card">
